tests/ui/inference/multiple-impl-apply.stderr
error[E0283]: type annotations needed
  --> $DIR/multiple-impl-apply.rs:34:15
   |
LL |     let y = x.into();
   |               ^^^^
   |
note: multiple `impl`s satisfying `_: From<Baz>` found
  --> $DIR/multiple-impl-apply.rs:14:1
   |
LL | impl From<Baz> for Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl From<Baz> for Foo {
   | ^^^^^^^^^^^^^^^^^^^^^^
   = note: required for `Baz` to implement `Into<_>`
help: try using a fully qualified path to specify the expected types
   |
LL |     let y = <Baz as Into<T>>::into(x);
   |             +++++++++++++++++++++++ ~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
